--- a/web-admin/package.json
+++ b/web-admin/package.json
@@ -15,6 +15,8 @@
   "dependencies": {
     "@iconify/vue": "^5.0.0",
     "@tailwindcss/vite": "^4.1.11",
+    "@wangeditor/editor": "^5.1.23",
+    "@wangeditor/editor-for-vue": "^5.1.12",
     "axios": "^1.10.0",
     "naive-ui": "^2.42.0",
     "pinia": "^3.0.3",
